--- a/Examen2_Francisco/nbproject/project.properties
+++ b/Examen2_Francisco/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=examen2_francisco.Examen2_Francisco
+main.class=examen2_francisco.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
